--- a/Health37/AllClasses/LoginSignupScreen/LoginSignupScreen.xib
+++ b/Health37/AllClasses/LoginSignupScreen/LoginSignupScreen.xib
@@ -49,6 +49,7 @@
                 <outlet property="toolBar" destination="HRk-Y1-7cr" id="nil-7k-pll"/>
                 <outlet property="txtCardiac" destination="iuc-Td-5ez" id="70m-O8-P85"/>
                 <outlet property="txtCountryCode" destination="bgk-bk-gS9" id="md2-eE-YiI"/>
+                <outlet property="txtCountryCodeLandline" destination="z2L-gF-afz" id="CgN-C8-U48"/>
                 <outlet property="txtEmail" destination="qIu-yR-A4Z" id="ond-xb-Pzl"/>
                 <outlet property="txtEmailForgotPass" destination="JRi-mZ-qXe" id="eWS-jM-jb7"/>
                 <outlet property="txtEmailSignup" destination="BMs-EI-4NI" id="5Ho-5z-q80"/>
@@ -241,7 +242,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3R-ej-c1B">
-                                    <rect key="frame" x="190" y="0.0" width="169" height="2"/>
+                                    <rect key="frame" x="189" y="0.0" width="169" height="2"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" red="0.0028594916220000001" green="0.59611362219999997" blue="0.62344777579999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -326,7 +327,7 @@
                                         <outlet property="delegate" destination="-1" id="vXh-yd-OlO"/>
                                     </connections>
                                 </textField>
-                                <textField opaque="NO" tag="100" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="8284825189" placeholder="Mobile No." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vzi-0b-kgZ">
+                                <textField opaque="NO" tag="100" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Mobile No." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vzi-0b-kgZ">
                                     <rect key="frame" x="125" y="167" width="234" height="24"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
@@ -434,8 +435,22 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                             <color key="tintColor" red="0.054355211559999998" green="0.59529024360000005" blue="0.62354010339999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrowDown.png" translatesAutoresizingMaskIntoConstraints="NO" id="aeb-ed-4QS">
+                                            <rect key="frame" x="60" y="15" width="10" height="10"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <textField opaque="NO" tag="100" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="+91" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z2L-gF-afz">
+                                            <rect key="frame" x="25" y="8" width="53" height="24"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="-1" id="CwG-yD-NhV"/>
+                                            </connections>
+                                        </textField>
                                         <textField opaque="NO" tag="12" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Landline Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aSg-sl-C8k">
-                                            <rect key="frame" x="30" y="8" width="300" height="24"/>
+                                            <rect key="frame" x="75" y="8" width="260" height="24"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
                                             <textInputTraits key="textInputTraits" keyboardType="phonePad" enablesReturnKeyAutomatically="YES"/>
