--- a/Health37/AllClasses/UserDetailUpdateScreen/UserDetailUpdateScreen.xib
+++ b/Health37/AllClasses/UserDetailUpdateScreen/UserDetailUpdateScreen.xib
@@ -39,6 +39,7 @@
                 <outlet property="txtConfirmPass" destination="dZv-gy-OMy" id="WNm-Uv-3V3"/>
                 <outlet property="txtCountryCode" destination="aET-JK-D9a" id="FNl-dL-073"/>
                 <outlet property="txtEmail" destination="6gq-vE-lxX" id="GKW-p5-PSU"/>
+                <outlet property="txtLandlineCode" destination="Qb7-4L-zl7" id="zGs-6n-Pzl"/>
                 <outlet property="txtMobileNo" destination="oGq-YL-Iju" id="R1L-A5-MRl"/>
                 <outlet property="txtNewPassword" destination="F5W-5x-neO" id="M3J-PS-STQ"/>
                 <outlet property="txtPassword" destination="CDJ-4m-Fcd" id="GLg-hU-pGs"/>
@@ -101,7 +102,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVi-Qd-f8g">
-                            <rect key="frame" x="260" y="0.0" width="1" height="54"/>
+                            <rect key="frame" x="259" y="0.0" width="1" height="54"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.0039215686269999999" green="0.59607843140000005" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -109,7 +110,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgF-x1-Ryh">
-                            <rect key="frame" x="111" y="0.0" width="1" height="54"/>
+                            <rect key="frame" x="110" y="0.0" width="1" height="54"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.0039215686269999999" green="0.59607843140000005" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -239,6 +240,9 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="ixR-2s-ob0"/>
+                            </connections>
                         </textField>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrowDown.png" translatesAutoresizingMaskIntoConstraints="NO" id="oGo-7J-wpS">
                             <rect key="frame" x="89" y="181" width="10" height="10"/>
@@ -323,14 +327,31 @@
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="phone" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GLh-oy-1kv">
                                     <rect key="frame" x="0.0" y="7" width="24" height="26"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="tintColor" red="0.054355211559999998" green="0.59529024360000005" blue="0.62354010339999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </imageView>
-                                <textField opaque="NO" tag="12" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Landline Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sVm-kp-lVR">
-                                    <rect key="frame" x="30" y="8" width="300" height="24"/>
+                                <textField opaque="NO" tag="100" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="+1" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qb7-4L-zl7">
+                                    <rect key="frame" x="30" y="8" width="45" height="24"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="-1" id="gnm-Gz-Woq"/>
+                                    </connections>
+                                </textField>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrowDown.png" translatesAutoresizingMaskIntoConstraints="NO" id="80E-7a-GsI">
+                                    <rect key="frame" x="68" y="15" width="10" height="10"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
+                                <textField opaque="NO" tag="15" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Landline Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sVm-kp-lVR">
+                                    <rect key="frame" x="85" y="8" width="250" height="24"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
                                     <textInputTraits key="textInputTraits" keyboardType="phonePad" enablesReturnKeyAutomatically="YES"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="-1" id="YtX-wQ-okS"/>
+                                    </connections>
                                 </textField>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
